--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,12 +26,14 @@
     <link rel="stylesheet" type="text/css" href="static/aster-theme.css">
     <link rel="stylesheet" type="text/css" href="static/aster-navbar.css">
     <link rel="stylesheet" type="text/css" href="static/aster-contact.css">
+    <link rel="stylesheet" type="text/css" href="static/aster-press.css">
 
     <!-- Download fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
     <!-- Load JS scripts -->
+    <script src="static/includes/jquery-3.4.1.min.js"></script>
     <script src="static/includes/bootstrap.min.js"></script>
 
   </head>
