--- a/templates/press.html
+++ b/templates/press.html
@@ -8,22 +8,20 @@
 
     <section class="row press-bg">
 
-        <div class="container container-press">
-            <div id="media-carousel" class="carousel slide" data-ride="carousel">
+        <div id="media-carousel" class="carousel slide carousel-fade" data-ride="carousel">
 
-                <ol class="carousel-indicators" style="color: black;">
-                  <li data-target="#media-carousel" data-slide-to="0" class="active"></li>
-                  <li data-target="#media-carousel" data-slide-to="1"></li>
-                  <li data-target="#media-carousel" data-slide-to="2"></li>
-                  <li data-target="#media-carousel" data-slide-to="3"></li>
-                  <li data-target="#media-carousel" data-slide-to="4"></li>
-                  <li data-target="#media-carousel" data-slide-to="5"></li>
-                </ol>
+            <ol class="carousel-indicators" style="color: black;">
+              <li data-target="#media-carousel" data-slide-to="0" class="active"></li>
+              <li data-target="#media-carousel" data-slide-to="1"></li>
+              <li data-target="#media-carousel" data-slide-to="2"></li>
+            </ol>
 
-                <div class="carousel-inner">
+            <div class="container p-t-0 m-t-2 carousel-inner">
+                
+                <div class="row-equal carousel-item active m-t-0">
 
-                    <div class="carousel-item col-md-4 active">
-                        <div class="card">
+                    <div class="col-md-4">
+                        <div class="card h-100">
                             <img class="card-img-top img-fluid" src="static/images/articles/article-01.png" alt="Medium Article">
                             <div class="card-body">
                                 <h4 class="card-title"><a href="https://medium.com/@merylldin/project-aster-ibm-call-for-code-30d959614be7" target="_blank">The exciting design of Project AsTeR</a></h4>
@@ -31,9 +29,9 @@
                             </div>
                         </div>
                     </div>
-                    
-                    <div class="carousel-item col-md-4">
-                        <div class="card">
+                
+                    <div class="col-md-4">
+                        <div class="card h-100">
                             <img class="card-img-top img-fluid" src="static/images/articles/article-02.png" alt="TechRepublic Article">
                             <div class="card-body">
                                 <h4 class="card-title"><a href="https://www.techrepublic.com/article/ibm-announces-the-finalists-of-call-for-code-2019/" target="_blank">Finalists of Call for Code 2019</a></h4>
@@ -42,8 +40,8 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item col-md-4">
-                        <div class="card">
+                    <div class="col-md-4">
+                        <div class="card h-100">
                             <img class="card-img-top img-fluid" src="static/images/articles/article-03.png" alt="Berkeley Article">
                             <div class="card-body">
                                 <h4 class="card-title"><a href="https://funginstitute.berkeley.edu/news/meng-alumni-address-disaster-response-through-project-aster/" target="_blank"> Berkeley MEng alumni</a></h4>
@@ -52,7 +50,11 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item col-md-4">
+                </div>
+
+                <div class="row-equal carousel-item m-t-0">
+
+                    <div class="col-md-4">
                         <div class="card">
                             <img class="card-img-top img-fluid" src="static/images/articles/article-04.png" alt="IBM Article">
                             <div class="card-body">
@@ -62,7 +64,7 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item col-md-4">
+                    <div class="col-md-4">
                         <div class="card">
                             <img class="card-img-top img-fluid" src="static/images/articles/article-05.png" alt="IBM Article">
                             <div class="card-body">
@@ -72,7 +74,7 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item col-md-4">
+                    <div class="col-md-4">
                         <div class="card">
                             <img class="card-img-top img-fluid" src="static/images/articles/article-06.png" alt="TechCrunch Article">
                             <div class="card-body">
@@ -82,17 +84,51 @@
                         </div>
                     </div>
 
-                    <a class="carousel-control-prev" href="#media-carousel" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
+                </div>
 
-                    <a class="carousel-control-next" href="#media-carousel" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                <div class="row-equal carousel-item m-t-0">
+
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="card-img-top img-fluid" src="static/images/articles/article-07.png" alt="CTA Article">
+                            <div class="card-body">
+                                <h4 class="card-title"><a href="https://www.cta.tech/News/Blog/Articles/2019/May/These-Berkeley-College-Students-Are-Using-Artifici.aspx" target="_blank">CTA Feature</a></h4>
+                                <p class="card-text"><small class="text-muted">Written on September, 25th, 2019.</small></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="card-img-top img-fluid" src="static/images/articles/article-08.png" alt="Berkeley Article">
+                            <div class="card-body">
+                                <h4 class="card-title"><a href="https://medium.com/the-coleman-fung-institute/meng-alumni-address-disaster-response-through-project-aster-d3958338e0aa" target="_blank">Berkeley Project Call to Action</a></h4>
+                                <p class="card-text"><small class="text-muted">Written on May, 31th, 2019, 2019.</small></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="card-img-top img-fluid" src="static/images/articles/article-09.png" alt="IBM Article">
+                            <div class="card-body">
+                                <h4 class="card-title"><a href="https://ibmcode-staging.us-east.containers.mybluemix.net/callforcode/blogs/call-for-code-2019-finalist-aster/" target="_blank">IBM Presentation</a></h4>
+                                <p class="card-text"><small class="text-muted">Written on September, 12th, 2019.</small></p>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
+
+                <a class="carousel-control-prev" href="#media-carousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+
+                <a class="carousel-control-next" href="#media-carousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
 
             </div>
         </div>
@@ -100,32 +136,5 @@
     </section>
 
 </body>
-
-<script>
-$(document).ready(function() {
-  $("#media-carousel").on("slide.bs.carousel", function(e) {
-    var $e = $(e.relatedTarget);
-    var idx = $e.index();
-    var itemsPerSlide = 3;
-    var totalItems = $(".carousel-item").length;
-
-    if (idx >= totalItems - (itemsPerSlide - 1)) {
-      var it = itemsPerSlide - (totalItems - idx);
-      for (var i = 0; i < it; i++) {
-        // append slides to end
-        if (e.direction == "left") {
-          $(".carousel-item")
-            .eq(i)
-            .appendTo(".carousel-inner");
-        } else {
-          $(".carousel-item")
-            .eq(0)
-            .appendTo($(this).find(".carousel-inner"));
-        }
-      }
-    }
-  });
-});
-</script>
 
 {% endblock %}
