--- a/static/aster-press.css
+++ b/static/aster-press.css
@@ -1,9 +1,24 @@
+@media(max-width:576px){
+    .carousel {
+        max-width: 95vw;
+    }
+    .carousel-item {
+        display: inline;
+    }
+}
+
 .press-bg {
     background-image: url('images/press-bg.jpeg'); 
 }
 
 .carousel-inner {
     max-width: 100%;
+}
+
+@media(max-width:576px){
+    .carousel-inner {
+        margin-top: 50px;
+    }
 }
 
 .carousel-control-next-icon, .carousel-control-prev-icon {
@@ -23,17 +38,36 @@
     margin-left: -5vw;
 }
 
+@media(max-width:576px){
+    .carousel-control-next-icon {
+        display: none;
+    }
+    .carousel-control-prev-icon {
+        display: none;
+    }
+}
+
 .carousel-indicators {
     bottom: -5vh;
 }
 
+@media(max-width:576px){
+    .carousel-indicators {
+        display: none;
+    }
+}
+
 .row-equal {
+    display: none;
     height: 100%;
 }
 
 .row-equal > div[class*='col-'] {
     display: inline-block;
     flex: 1 0 auto;
+    width: 33%;
+    max-width: 33%;
+    line-height: 5vh;
 }
 
 .row-equal .card {
@@ -43,7 +77,7 @@
 .carousel-inner>.row-equal.active, 
 .carousel-inner>.row-equal.next, 
 .carousel-inner>.row-equal.prev {
-    display: flex;
+    width: 100vw;
 }
 
 .carousel-inner>.row-equal.active.left, 
