Fix initial menu and fontawesome icons origin

--- a/static/aster-navbar.css
+++ b/static/aster-navbar.css
@@ -81,7 +81,6 @@
     border-top-left-radius: .3rem;
     border-top-right-radius: .3rem;
     overflow: hidden;
-    padding: 0 3rem 0 0;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
     -webkit-transform-origin: right;
@@ -89,7 +88,9 @@
     transition: -webkit-transform .35s ease-in;
     transition: transform .35s ease-in;
     transition: transform .35s ease-in, -webkit-transform .35s ease-in;
-    width: 25vw;
+    width: 18vw;
+    position: absolute;
+    right: 5vw;
 }
 
 .top-wrapper .menu-mobile {
@@ -127,7 +128,7 @@
     display: flex;
     flex-shrink: 1;
     margin-right: 20px;
-    width: calc((100%) / 2);
+    width: calc(100% / 2);
 }
 
 .top-wrapper .menu-mobile > ul > li {
