--- a/static/aster-press.css
+++ b/static/aster-press.css
@@ -11,6 +11,14 @@
     background-image: url('images/press-bg.jpeg'); 
 }
 
+@media(max-width:576px){
+    .press-bg {
+        background-image: none;
+        background-color: black;
+    }
+}
+
+
 .carousel-inner {
     max-width: 100%;
 }
