--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,8 @@
 
     <!-- Spread css files to all child of layout.html-->
     <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="static/font-awesome.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="static/font-awesome.min.css"> -->  
+    <link rel="stylesheet" href="https://lipis.github.io/bootstrap-social/assets/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="static/aster-theme.css">
     <link rel="stylesheet" type="text/css" href="static/aster-navbar.css">
     <link rel="stylesheet" type="text/css" href="static/aster-contact.css">
