--- a/templates/demo.html
+++ b/templates/demo.html
@@ -2,20 +2,44 @@
 
 {%  block body %}
 
-<body onload="document.body.style.opacity='1'">
+    <body onload="document.body.style.opacity='1'">
+    <link href="/static/aster-demo.css" rel="stylesheet">
 
-    <title>Aster | Demo</title>
+    <main role="main" class="row home-bg-1" id='demo'>
+        <title>Aster | Demo</title>
 
-    <section class="row home-bg-1" id="home">
-
-        <div class="tagline">
-            <span>
-                Running our latest demo product!
-            </span>
+        <div class="tagline tagline-offset tagline-demo">
+            An interactive dashboard for first responders.
         </div>
-
-    </section>
-
-</body>
+        <div class="container row">
+            <div class="demo-feature col-3 align-top row" style="padding-right: 10px">
+                <text>
+                    This is a simplified version of the dashboard that will be presented to call centers.
+                    <br>
+                    <br>
+                    An interactive map displays the most recent calls. The priority scores and classes are displayed
+                    on the right. This helps operators focus their efforts on those calls which require immediate
+                    attention.
+                </text>
+                <div class="btn-holder text-center row" style="width: 80%">
+                    <button type="button" data-toggle="button" data-loading-text="Try me!" onclick=""
+                            class="btn btn-outline-success aster-color btn-block mt-auto activated">Try me!</button>
+                </div>
+            </div>
+            <div class="col demo-feature-with-border">
+                <div id= 'map'></div>
+                <script type="text/javascript">
+                    var map_parameters = {{ map_parameters|tojson|safe }};
+                </script>
+                <script type="text/javascript" src="/static/includes/aster-map.js"></script>
+                <script async defer src="https://maps.googleapis.com/maps/api/js?key={{google_key}}&callback=initMap&language=en"></script>
+{#                <div id="legend"><h5>Legend</h5></div>#}
+            </div>
+            <div class="demo-feature col-3">
+                <h1 class="text-center calls">Incoming calls</h1>
+            </div>
+        </div>
+    </main>
+    </body>
 
 {% endblock %}
