--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,24 +18,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- Website Icon-->
-    <link rel="icon" type="image/jpg" href="static/images/logo-aster.png">
+    <link rel="icon" type="image/jpg" href="/static/images/logo-aster.png">
 
     <!-- Spread css files to all child of layout.html-->
-    <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
     <!-- <link rel="stylesheet" type="text/css" href="static/font-awesome.min.css"> -->  
     <link rel="stylesheet" href="https://lipis.github.io/bootstrap-social/assets/css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="static/aster-theme.css">
-    <link rel="stylesheet" type="text/css" href="static/aster-navbar.css">
-    <link rel="stylesheet" type="text/css" href="static/aster-contact.css">
-    <link rel="stylesheet" type="text/css" href="static/aster-press.css">
+    <link rel="stylesheet" type="text/css" href="/static/aster-theme.css">
+    <link rel="stylesheet" type="text/css" href="/static/aster-navbar.css">
+    <link rel="stylesheet" type="text/css" href="/static/aster-contact.css">
+    <link rel="stylesheet" type="text/css" href="/static/aster-press.css">
 
     <!-- Download fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
     <!-- Load JS scripts -->
-    <script src="static/includes/jquery-3.4.1.min.js"></script>
-    <script src="static/includes/bootstrap.min.js"></script>
+    <script src="/static/includes/jquery-3.4.1.min.js"></script>
+    <script src="/static/includes/bootstrap.min.js"></script>
+
 
   </head>
   
