Clean repository and update production settings

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,14 @@
     <meta charset="UTF-8">
     <meta name="author" content="Meryll Dindin"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Social media taggs -->
+    <meta property="og:title" content="Project AsTeR">
+    <meta property="og:description" content="AI-Powered Real-Time Emergency Calls Analysis">
+    <meta property="og:image" content="static/images/home-bg-1.jpg">
+    <meta property="og:site_name" content="AsTeR">
+    <meta name="twitter:card" content="AI-Powered Real-Time Emergency Calls Analysis">
+    <meta name="twitter:image:alt" content="Project AsTeR">
     
     <!-- Website Icon-->
     <link rel="icon" type="image/jpg" href="static/images/logo-aster.png">
